# FFmpegDemo

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sogou/testforffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/sogou/testforffmpeg/: MainActivity.java
app/src/test/java/com/sogou/testforffmpeg/: ExampleUnitTest.java
